Closed Bug 355244 Opened 19 years ago Closed 17 years ago

merging Sun and Mozilla libssldap

Categories

(Directory Graveyard :: LDAP C SDK, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: neuroc0der, Assigned: mcs)

References

Details

Attachments

(1 file, 2 obsolete files)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.7) Gecko/20060909 Firefox/1.5.0.7 Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.7) Gecko/20060909 Firefox/1.5.0.7 the main work on this has been done before we officially started the merge when i brought Sun branch libssldap more up to date and compatible with Mozilla code as part of fixing and revamping startTLS effort so its paid off well now coz there aint that many changes for the final merge. also to simplify things and avoid bloat i figured this is a good time to get rid of some legacy stuff on the Sun branch and clean things up a bit. patch to follow shortly. Reproducible: Always
Attached patch the first cut of the patch (obsolete) — Splinter Review
to address obvious questions about this patch : - common.c is affected because current Mozilla implementation of startTLS / Cert based client auth combo is broken. you can see related changes in libssldap as well. we had the same problem on Sun branch when i did align it with related Mozilla code. its Sun CR #6348646 "cert based client auth doesnt work with start TLS" btw. - FORTEZZA support has been ditched because its deprecated in NSS and no longer supported as of version 3.11. there some more FORTEZZA code left at other locations outside the scope of this patch. i'm gonna remove it when i get to those parts of code. - two new public api: ldapssl_import_fd() and ldapssl_reset_to_nonsecure() they are not critical for us to keep but i kept them for these reasons: + declared as public on Sun branch. + can be useful to folks doing some nonstandard stuff. + dont interfere with the rest of stuff unless called explicitly. thats about it. i wanna get this on sun_merge branch so please review. ta!
forgot to add: the patch has been tested on Solaris and works as expected.
Blocks: 339298
Anton, are these diffs against the sun_merge_branch or against the trunk? Because I thought I already made some of these same fixes against the trunk, and those did not end up on the merge branch. ldapsinit.c revision 5.14 date 2006/08/04 bug 347033 http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=DirectorySDKSourceC&branch=HEAD&branchtype=match&dir=mozilla%2Fdirectory%2Fc-sdk%2Fldap%2Flibraries%2Flibssldap&file=ldapsinit.c&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=all&mindate=&maxdate=&cvsroot=%2Fcvsroot
(In reply to comment #3) they are against sun_merge. god, i should have bought some memory, its cheap these days. will sync with changes on HEAD that never made it to sun_merge and post the next rev of the patch shortly. > Anton, are these diffs against the sun_merge_branch or against the trunk? > Because I thought I already made some of these same fixes against the trunk, > and those did not end up on the merge branch. > ldapsinit.c revision 5.14 date 2006/08/04 bug 347033 > http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=DirectorySDKSourceC&branch=HEAD&branchtype=match&dir=mozilla%2Fdirectory%2Fc-sdk%2Fldap%2Flibraries%2Flibssldap&file=ldapsinit.c&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=all&mindate=&maxdate=&cvsroot=%2Fcvsroot >
Attached patch sync'ed with HEAD patch (obsolete) — Splinter Review
ok, this one takes care of related changes on HEAD, please review.
Attachment #241068 - Attachment is obsolete: true
All of these diffs except for 3, 4, 5, 6, 7, and from diff 15 on, are already on the trunk. Otherwise, the new diffs look fine.
should i go ahead and check it in onto the sun_merge ?
Hmm - I think it would be better to just go ahead and commit to the trunk, since most of this code is already on the trunk.
thanx for review and comments Rich! this is the same exact patch but this time against HEAD. Mark, if its ok with you i would like to check this in and move on.
Attachment #241179 - Attachment is obsolete: true
This should very safe to commit to the trunk. The only real differences with the code that's already on the trunk are that this code explicitly enables TLSv1 and adds a couple of new ssldap API functions.
Comment on attachment 241687 [details] [diff] [review] same patch against HEAD Yes, I think this is OK.
Attachment #241687 - Flags: review+
thanx folks! committed to the trunk now : Checking in mozilla/directory/c-sdk/ldap/clients/tools/common.c; /cvsroot/mozilla/directory/c-sdk/ldap/clients/tools/common.c,v <-- common.c new revision: 5.21; previous revision: 5.20 done Checking in mozilla/directory/c-sdk/ldap/include/ldap_ssl.h; /cvsroot/mozilla/directory/c-sdk/ldap/include/ldap_ssl.h,v <-- ldap_ssl.h new revision: 5.7; previous revision: 5.6 done Checking in mozilla/directory/c-sdk/ldap/libraries/libldap_ssl.ex; /cvsroot/mozilla/directory/c-sdk/ldap/libraries/libldap_ssl.ex,v <-- libldap_ssl.ex new revision: 5.7; previous revision: 5.6 done Checking in mozilla/directory/c-sdk/ldap/libraries/libssldap/clientinit.c; /cvsroot/mozilla/directory/c-sdk/ldap/libraries/libssldap/clientinit.c,v <-- clientinit.c new revision: 5.8; previous revision: 5.7 done Checking in mozilla/directory/c-sdk/ldap/libraries/libssldap/errormap.c; /cvsroot/mozilla/directory/c-sdk/ldap/libraries/libssldap/errormap.c,v <-- errormap.c new revision: 5.6; previous revision: 5.5 done Checking in mozilla/directory/c-sdk/ldap/libraries/libssldap/ldapsinit.c; /cvsroot/mozilla/directory/c-sdk/ldap/libraries/libssldap/ldapsinit.c,v <-- ldapsinit.c new revision: 5.16; previous revision: 5.15 done Checking in mozilla/directory/c-sdk/ldap/libraries/libssldap/secerrstrs.h; /cvsroot/mozilla/directory/c-sdk/ldap/libraries/libssldap/secerrstrs.h,v <-- secerrstrs.h new revision: 5.4; previous revision: 5.3 done Checking in mozilla/directory/c-sdk/ldap/libraries/libssldap/sslerrstrs.h; /cvsroot/mozilla/directory/c-sdk/ldap/libraries/libssldap/sslerrstrs.h,v <-- sslerrstrs.h new revision: 5.4; previous revision: 5.3 done
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: