Bug 355244 merging Sun and Mozilla libssldap