directory/c-sdk/ldap/clients/tools/common.c
@@ -1005,25 +1005,29 @@ ldaptool_ldap_init( int second_host )
     {/* startTLS if -ZZ or -ZZZ option is used */
     
         if (( ld = prldap_init( host, port, 0 )) == NULL) {
-		perror("prldap_init failed");
-		exit( LDAP_LOCAL_ERROR );
-	}
+			perror("prldap_init failed");
+			exit( LDAP_LOCAL_ERROR );
+		}
 
-	if ( ssl_certname != NULL ) {
-		if (ldapssl_enable_clientauth( ld, ssl_keydbpath, ssl_passwd,
-					       ssl_certname ) != 0 ) {
-			exit ( ldaptool_print_lderror( ld, "ldapssl_enable_clientauth",
-						       LDAPTOOL_CHECK4SSL_ALWAYS ));
-		}
-	}
-	/* Call to startTLS over the current clear-text connection */
-	if ( ( rc = ldap_start_tls_s( ld, NULL, NULL ) ) != LDAP_SUCCESS ) {
-		fprintf( stderr, "ldap_start_tls_s failed: (%s)\n",ldap_err2string(rc));
-		if( isZZZ ) {
-			ldap_unbind( ld );
-			exit( rc );
-		}
-	}
+	    /* Provide client authentication if -N option is used */
+        if ( ssl_certname != NULL ) {
+        	if (ldapssl_enable_clientauth( ld, ssl_keydbpath, ssl_passwd,
+              	ssl_certname ) != 0 ) {
+              exit ( ldaptool_print_lderror( ld, "ldapssl_enable_clientauth",
+		      		LDAPTOOL_CHECK4SSL_ALWAYS ));
+	      	}   
+        }
+
+        /* Call to startTLS over the current clear-text connection */
+        if ( ( rc = ldap_start_tls_s( ld, NULL, NULL ) ) != LDAP_SUCCESS ) {
+			fprintf( stderr, "ldap_start_tls_s failed: (%s)\n",
+					ldap_err2string(rc));
+			if( isZZZ ) {
+				ldap_unbind( ld );
+				exit( rc );
+			}
+	    }
+        
     } /* End startTLS case */
     else {
 	/* In order to support IPv6, we use NSPR I/O */
