directory/c-sdk/ldap/libraries/libldap_ssl.ex
@@ -48,6 +48,8 @@
 462 ldapssl_get_option
 463 ldap_start_tls_s
 464 ldapssl_shutdown
+465 ldapssl_import_fd
+466 ldapssl_reset_to_nonsecure
 # the last Windows ordinal number that has been reserved for SSL is 469.
 
 # Windows ordinals 1100-1150 are reserved for privately/non-published
